tests/pp-fail/duplicate_def.fl.0.exp
Error: duplicate_def.fl(2,9): 'Def' is already defined 
\define Def
\define Def
        ^   
